Tue May 10 11:55:08 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/CheckDelaunay.java:  Replace a call to OTriangle.getOrientation() which has been removed.  Adjust the niter variable to break infinite loops earlier.

Tue May  3 08:42:05 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: Remove export methods, they are now handled by UNVConverter.

Fri Apr 29 12:32:07 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MMesh3DReader.java: Modify reader so that it works also when groups are deleted from jcae3d.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (inCircleTest3): Suppress flat triangles.  TODO: investigate why these flat triangles appear in algos2d.Insertion.

Tue Apr 26 16:02:23 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/algos1d/Compat1D2D.java: If curvature is very large and an absolute deflection is requested, there is no need to discretize because deflection will be small anyway.  This is similar to the fix in Metric3D at 2005-04-13.
	* src/org/jcae/mesh/mesher/algos1d/Compat1D2D.java: If a curvature is not defined, try with a near point.

Thu Apr 21 15:26:27 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/UNVConverter.java: Write nodes in the same order as in binary files.
	* src/org/jcae/mesh/xmldata/MeshReader.java
	  src/org/jcae/mesh/xmldata/MeshWriter.java: Write adjacency relations into binary files.

Wed Apr 20 14:00:45 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/validation: New classes to check generated meshes.
	* src/org/jcae/mesh/xmldata/MMesh3DReader.java: Do not abort if the normals file was not generated.

Thu Apr 14 09:29:10 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/masher/ds: Move 3D classes into...
	* src/org/jcae/mesh/amibe/ds: ... amibe...