@@ -1,3 +1,7 @@
+Thu May 12 11:19:29 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/Mesher.java: Export meshes only if org.jcae.mesh.Mesher.mesh3d property is true.  Add new org.jcae.mesh.exportMESH and org.jcae.mesh.exportUNV properties to be able to not export meshes.
+
 Tue May 10 11:55:08 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/CheckDelaunay.java:  Replace a call to OTriangle.getOrientation() which has been removed.  Adjust the niter variable to break infinite loops earlier.
